# SolarStorm

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  PLAN_2026-06-01.md  README.md  mypy.ini  pyproject.toml  review_29.md  ruff.toml
artifacts/: _wave41_auto_live_stderr.txt
audits/: run_h0_audit.py
contracts/: analog_high_risk_arm_v0_prereg.md  analog_quality_v0_1_prereg.md  analog_retrieval_audit_prereg.md  calibration_stopgap_memo_v0_scope.md  calm_day_filter_v0_prereg.md  conditional_calibration_v0_prereg.md  cqr_lightgbm_quantile_v0_prereg.md  diagnostic_ic_display_contract_v0_scope.md  ecmwf_causal_ingest_feasibility_v0_scope.md  ecmwf_ensemble_point_gain_v0_prereg.md  execution.md  features.md  forecast_error_taxonomy_v0_scope.md  imputation.md  late_warming_risk_v0_1_prereg.md  live_shadow_ops_v1_prereg.md  native_integer_conformal_v0_prereg.md  non_calm_high_delta_model_v0_prereg.md  nwp_early_lead_point_gain_v0_scope.md  nwp_source.md  nwp_spread_sigma_feasibility_v0_scope.md  objective.md  phase4_preregistration.md  phase5_amendment.md  phase5_amendment_trackA_a3.md  phase5_amendment_trackD_d1_randomized_Q.md  phase5_amendment_trackP_predictive_uncertainty.md  phase5_amendment_trackPprime_quantization_margin.md  phase5_preregistration.md  quantization.md  resolver.md  serving_candidate_matrix_v0_prereg.md  two_model_spread_feasibility_v0_prereg.md
core/: __init__.py
data/: labels.parquet
docs/: PROJECT_JOURNEY.md  architecture.md  bug-register.md  glossary.md  guia_portabilidade.md  live_shadow_runbook.md  phase5_next_steps_2026-06-03.md  principles.md  replication.md  req_aud5_normative.md  serving.md
notebooks/: 00_metar_sanity.ipynb  01_regime_explore.ipynb  02_tmax_hour.ipynb  03_baseline_leaderboard.ipynb
reports/: backtest_may2026.json  backtest_may2026.md  core_predictor_status.json  core_predictor_status.md  ensemble_pivot_assessment.md  gfs_probe.json  h0_verdict.json  late_warming_bias_audit.json  late_warming_bias_audit.md  model_error_taxonomy.json  model_error_taxonomy.md  model_metrics_summary.md  nwp_early_lead_point_gain.json  nwp_early_lead_point_gain.md  phase3.json  phase3.md  phase4.json  phase4.md  phase4_option1_runbook.md  phase5.json  (+21 more)
(+393 files in other folders)
