[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solarstorm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["polars>=1.0", "numpy>=1.26", "typer>=0.12", "tzdata"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
tmax = "solarstorm.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "network: test hits the live IEM ASOS endpoint (deselect with -m 'not network')",
]
